# seldom_fn_plugin

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
