[package]
name = "seldom_fn_plugin"
version = "0.1.0"
edition = "2021"
categories = ["game-development"]
description = "Allows using Rust functions in place of Bevy plugins"
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Seldom-SE/seldom_fn_plugin"

[dependencies]
bevy = { version = "0.8", default-features = false }
